--- a/public/style.css
+++ b/public/style.css
@@ -474,7 +474,7 @@
     width: 100%;
     height: 60vh;
    
-    background: url(../img/hero-bg.png) top center no-repeat;
+    background: url(/assets/img/hero-bg.png) top center no-repeat;
     background-size: cover;
   }
   
@@ -2304,7 +2304,7 @@
   }
   
   .footer .footer-top {
-    background: white url(../img/footer-bg.png) no-repeat right top;
+    background: white url(/assets/img/footer-bg.png) no-repeat right top;
     background-size: contain;
     border-top: 1px solid #e1ecff;
     border-bottom: 1px solid #e1ecff;
