fix email sending

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -539,7 +539,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="/sendEmail" method="post" class="php-email-form">
+            <form action="/sendEmail" method="post" class="node-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
