--- a/public/style.css
+++ b/public/style.css
@@ -1645,13 +1645,13 @@
     margin-bottom: 0;
   }
   
-  .contact .php-email-form {
+  .contact .node-email-form {
     background: #fafbff;
     padding: 30px;
     height: 100%;
   }
   
-  .contact .php-email-form .error-message {
+  .contact .node-email-form .error-message {
     display: none;
     color: #fff;
     background: #ed3c0d;
@@ -1661,7 +1661,7 @@
     font-weight: 600;
   }
   
-  .contact .php-email-form .sent-message {
+  .contact .node-email-form .sent-message {
     display: none;
     color: #fff;
     background: #18d26e;
@@ -1671,7 +1671,7 @@
     font-weight: 600;
   }
   
-  .contact .php-email-form .loading {
+  .contact .node-email-form .loading {
     display: none;
     background: #fff;
     text-align: center;
@@ -1679,7 +1679,7 @@
     margin-bottom: 24px;
   }
   
-  .contact .php-email-form .loading:before {
+  .contact .node-email-form .loading:before {
     content: "";
     display: inline-block;
     border-radius: 50%;
@@ -1691,29 +1691,29 @@
     animation: animate-loading 1s linear infinite;
   }
   
-  .contact .php-email-form input,
-  .contact .php-email-form textarea {
+  .contact .node-email-form input,
+  .contact .node-email-form textarea {
     border-radius: 0;
     box-shadow: none;
     font-size: 14px;
     border-radius: 0;
   }
   
-  .contact .php-email-form input:focus,
-  .contact .php-email-form textarea:focus {
+  .contact .node-email-form input:focus,
+  .contact .node-email-form textarea:focus {
     border-color: #4154f1;
   }
   
-  .contact .php-email-form input[type=text],
-  .contact .php-email-form input[type=email] {
+  .contact .node-email-form input[type=text],
+  .contact .node-email-form input[type=email] {
     padding: 10px 15px;
   }
   
-  .contact .php-email-form textarea {
+  .contact .node-email-form textarea {
     padding: 12px 15px;
   }
   
-  .contact .php-email-form button[type=submit] {
+  .contact .node-email-form button[type=submit] {
     background: #4154f1;
     border: 0;
     padding: 10px 30px;
@@ -1722,7 +1722,7 @@
     border-radius: 4px;
   }
   
-  .contact .php-email-form button[type=submit]:hover {
+  .contact .node-email-form button[type=submit]:hover {
     background: #5969f3;
   }
   
