--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,16 @@
 
 
 </head>
+<!-- For google analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QLN6L0PD1S"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QLN6L0PD1S');
+</script>
 
 <body>
 
