--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,13 +30,14 @@
 </head>
 <!-- For google analytics -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-QLN6L0PD1S"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FRZRDC8C33"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-QLN6L0PD1S');
+  gtag('config', 'G-FRZRDC8C33');
 </script>
 
 <body>
