update meta tag

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,12 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  
 
   <title>Adevity</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
+  <!-- Meta Description: Provides a summary of the page's content for search engines and social media platforms -->
+  <meta name="description" content="Adevity offers innovative solutions for business growth. Specializing in software development and IT services, we help you navigate the digital landscape with cutting-edge technology and a client-centric approach.">
+  <!-- Meta Keywords: Lists keywords related to the page's content, which can be useful for internal documentation, although not frequently used by search engines for ranking -->
+  <meta name="keywords" content="software development, IT services, business solutions, technology, digital transformation">
+  <!-- Meta Robots: Instructs search engines on how to index the page (index, follow) -->
+  <meta name="robots" content="index, follow">
+  <!-- Viewport: Controls how the page is displayed on mobile devices, essential for responsive design -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Favicons -->
 
 
