update title tag

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   
 
-  <title>Adevity</title>
+  <title>Adevity - Custom Development and IT Solutions</title>
   <!-- Meta Description: Provides a summary of the page's content for search engines and social media platforms -->
   <meta name="description" content="Adevity offers innovative solutions for business growth. Specializing in software development and IT services, we help you navigate the digital landscape with cutting-edge technology and a client-centric approach.">
   <!-- Meta Keywords: Lists keywords related to the page's content, which can be useful for internal documentation, although not frequently used by search engines for ranking -->
