Add schema dll for SEO I tried using the meta tags for the SEO but it is still not showing up the way I want. This is still throwing darts at the dart board. But lets see if this makes it better

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,6 +31,19 @@
   <!-- Template Main CSS File -->
   <link href="/style.css" rel="stylesheet">
 
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "WebPage",
+      "headline": "Expert Custom Software Development and IT Solutions for Your Business Growth",
+      "description": "We are a team of developers and IT professionals ready to provide modern solutions to your problems",
+      "name": "Adevity - Custom Development and IT Solutions",
+      "url": "https://www.adevity.com"
+      
+    }
+  </script>
+    
+
 
 </head>
 <!-- For google analytics -->
