--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -478,10 +478,12 @@
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/img/clients/client-autoicharts.svg" style="width: 100%;" class="" alt="" ></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-Roese.png" class="" alt="" style="width: 100%;"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-bte.png"  alt="" style="width: 100%;"></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-sns.png"  class="" alt="" style="width: 100%;"></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-tqa.png" class="" alt="" style="width: 100%;"></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-docyber.jpg" style="width: 100%;"  alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-grassroots.png"  alt="" style="width: 100%;"></div>
+            
           </div>
           <div class="swiper-pagination"></div>
         </div>
