test recapcha for prod

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -42,7 +42,10 @@
       
     }
   </script>
-    
+  
+  <!-- recaptcha -->
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6LetzmgqAAAAADLaoX1lVkRuF9HGX48OyVsLChQr"></script>
+
 
 
 </head>
