--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -541,35 +541,30 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="/sendEmail" method="post" class="node-email-form">
+            <form action="/sendEmail" method="post" class="node-email-form" id="contactForm">
               <div class="row gy-4">
-
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required>
                 </div>
-
-                <div class="col-md-6 ">
+                <div class="col-md-6">
                   <input type="email" class="form-control" name="email" placeholder="Your Email" required>
                 </div>
-
                 <div class="col-md-12">
                   <input type="text" class="form-control" name="subject" placeholder="Subject" required>
                 </div>
-
                 <div class="col-md-12">
                   <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
                 </div>
-
+                <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
+                  <button type="submit" id="submitButton">Send Message</button>
                 </div>
-
               </div>
             </form>
+            
 
           </div>
 
