add some examples

--- a/views/partials/floorplanheader.ejs
+++ b/views/partials/floorplanheader.ejs
@@ -80,7 +80,7 @@
           <% if (hideEverythingBesidesHome === false) { %>
 
             
-            <li><a class="nav-link scrollto" href="#features">Features</a></li>
+            <li><a class="nav-link scrollto" href="#pricing">Features</a></li>
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             
         <% } %>
