add company logo and link to icharts

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -285,7 +285,14 @@
                   <i class="ri-line-chart-line"></i>
                   <div>
                     <h4>Inspection Systems for Automation</h4>
-                    <p>An app that delivers ‘real time’ inspection data to quality and manufacturing professionals for storage, management and communication to all functions in the ‘Value Stream’ using Industry Standards as a framework.</p>
+                    <p>An app that delivers ‘real time’ inspection data to quality and manufacturing professionals for storage, 
+                      management and communication 
+                      to all functions in the ‘Value Stream’ using Industry Standards as a framework.
+                      <br>
+                      <a href="https://www.autoicharts.com" class="btn btn-primary btn-sm mt-3">Go to Inspection System</a> 
+
+                    </p>
+                   
                   </div>
                 </div>
 
@@ -334,7 +341,7 @@
                   <div>
                     <h4>Floor Plan Solutions</h4>
                     <p>We offer professional floor plan creation and visualization services, helping businesses bring their spaces to life through detailed 2D  representations. Perfect for building management, and space planning needs.</p>
-                    <a href="https://floorplan.adevity.com" class="btn btn-primary btn-sm mt-3">Explore Floor Plans</a>
+                    <a href="https://floorplan.adevity.com" class="btn btn-primary btn-sm mt-3">Go to Floor Plan Solutions</a>
                   </div>
                 </div>
 
@@ -487,11 +494,13 @@
         <div class="clients-slider swiper">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/img/clients/client-autoicharts.svg" style="width: 100%;" class="" alt="" ></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-Roese.png" class="" alt="" style="width: 100%;"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-roese.png" class="" alt="" style="width: 100%;"></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-bte.png"  alt="" style="width: 100%;"></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-sns.png"  class="" alt="" style="width: 100%;"></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-tqa.png" class="" alt="" style="width: 100%;"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/client-docyber.jpg" style="width: 100%;"  alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/client-hustonleasure.png" class="" alt="" style="width: 100%;"></div>
+            
+            <div class="swiper-slide"><img src="assets/img/clients/client-vb.png" style="width: 70%;"  alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-grassroots.png"  alt="" style="width: 100%;"></div>
             
           </div>
