fix address mistake found by Charlie

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -531,7 +531,7 @@
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>1385 S Huron Rd<br>Michigan, MI 48631</p>
+                  <p>1385 S Huron Rd<br>Kawkawlin, MI 48631</p>
                 </div>
               </div>
               <div class="col-md-6">
