--- a/views/partials/floorplanfooter.ejs
+++ b/views/partials/floorplanfooter.ejs
@@ -133,7 +133,7 @@
             <h4>Contact Us</h4>
             <p>
               1385 S Huron Rd<br>
-              Michigan, MI 48631<br>
+              Kawkawlin, MI 48631<br>
               United States <br><br>
               <strong>Phone:</strong> +1 989-322-2000<br>
               <strong>Email:</strong> info@adevity.com<br>
