add help guide page

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -456,7 +456,7 @@
                   <div class="accordion-body">
                     Initiating a partnership with Adevity is a straightforward process. 
                     If you're interested in our services and would like to request a proposal or kick-start a project, 
-                    simply reach out to our dedicated team through contact form on our websit. 
+                    simply reach out to our dedicated team through the contact form on our website. 
                     Our friendly and knowledgeable professionals will guide you through the next steps, 
                     starting with a comprehensive consultation to understand your needs and objectives. 
                     We'll work closely with you to define project scope, provide you with a tailored proposal, and establish a clear roadmap for project commencement. 
