add link to support expectations

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -333,6 +333,7 @@
                     <h4>IT Support</h4>
                     <p>We take pride in our extensive experience and expertise in IT support, having successfully provided comprehensive solutions 
                         to address technical challenges, ensure system reliability, and bolster the digital infrastructure for numerous clients.</p>
+                    <a href="https://www.adevity.com/supportguide" class="btn btn-primary btn-sm">Read IT Support Expectations</a>
                   </div>
                 </div>
 
@@ -341,7 +342,7 @@
                   <div>
                     <h4>Floor Plan Solutions</h4>
                     <p>We offer professional floor plan creation and visualization services, helping businesses bring their spaces to life through detailed 2D  representations. Perfect for building management, and space planning needs.</p>
-                    <a href="https://floorplan.adevity.com" class="btn btn-primary btn-sm mt-3">Go to Floor Plan Solutions</a>
+                    <a href="https://floorplan.adevity.com" class="btn btn-primary btn-sm">Go to Floor Plan Solutions</a>
                   </div>
                 </div>
 
